// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tabs renders 1`] = `
<nav
  className="sc-fOpBKL kUfvlm"
>
  <a
    className="sc-dloDHE ehsnGD"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-oTTbF sc-iKKmqK joXcG"
  >
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#2"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#4"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#5"
      >
        Future
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Fill 1`] = `
<nav
  className="sc-fOpBKL kUfvlm"
>
  <a
    className="sc-dloDHE ehsnGD"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-oTTbF sc-iKKmqK joXcG"
  >
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#2"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#4"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#5"
      >
        Future
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Fill Container 1`] = `
<nav
  className="sc-fOpBKL iiqXtO"
>
  <a
    className="sc-dloDHE ehsnGD"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-oTTbF sc-iKKmqK joXcG hHKxdh"
  >
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#2"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#4"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#5"
      >
        Future
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-hBYLEG kKHfWT"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Is Top 1`] = `
<nav
  className="sc-fOpBKL kUfvlm"
>
  <a
    className="sc-dloDHE ehsnGD"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-oTTbF sc-iKKmqK joXcG"
  >
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt iGJuEE"
        href="#2"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt iGJuEE"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt iGJuEE"
        href="#4"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt iGJuEE"
        href="#5"
      >
        Future
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt iGJuEE"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt iGJuEE"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt iGJuEE"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Small 1`] = `
<nav
  className="sc-fOpBKL kUfvlm"
>
  <a
    className="sc-dloDHE ehsnGD"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-oTTbF sc-iKKmqK joXcG"
  >
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gXsloI"
        href="#2"
        size="small"
      >
        Featured
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gXsloI"
        href="#3"
        size="small"
      >
        Today
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gXsloI"
        href="#4"
        size="small"
      >
        Tomorrow
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gXsloI"
        href="#5"
        size="small"
      >
        Future
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gXsloI"
        href="#6"
        size="small"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gXsloI"
        href="#7"
        size="small"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gXsloI"
        href="#8"
        size="small"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;

exports[`Tabs renders Variant 1`] = `
<nav
  className="sc-fOpBKL kUfvlm"
>
  <a
    className="sc-dloDHE ehsnGD"
    href="#nav-test-id-1"
  >
    Skip to content
  </a>
  <ul
    className="sc-oTTbF sc-iKKmqK joXcG"
  >
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#2"
      >
        Featured
        <span
          className="sc-kwilob dRCGNC"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#3"
      >
        Today
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#4"
      >
        <div
          className="sc-iFHmoU kBZPdx"
        >
          <svg
            className="sc-dvwKko"
            fill="none"
            fontSize="1.4375rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Tomorrow
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#5"
      >
        <div
          className="sc-iFHmoU kBZPdx"
        >
          <svg
            className="sc-dvwKko"
            fill="none"
            fontSize="1.4375rem"
            height="1em"
            viewBox="0 0 32 32"
            width="1em"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M12.337 25.5H7.855c-.752 0-1.36-.614-1.355-1.367l.062-8.143a1.356 1.356 0 011.355-1.347h4.42m0 10.857h9.326c.635 0 1.184-.442 1.322-1.063l2.482-9.708a1.357 1.357 0 00-1.323-1.652h-3.781c-.854 0-1.524-.573-1.359-1.412l.7-3.545a1.357 1.357 0 00-1.33-1.62h-.266c-.482 0-.928.256-1.17.673l-4.6 7.47m0 10.857V14.643"
              stroke="currentColor"
            />
          </svg>
        </div>
        Future
        <span
          className="sc-kwilob dRCGNC"
        >
          00
        </span>
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#6"
      >
        Outright
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#7"
      >
        Leagues
      </a>
    </li>
    <li
      className="sc-dIZBxk"
    >
      <a
        className="sc-kvczt gHrCOn"
        href="#8"
      >
        News
      </a>
    </li>
  </ul>
  <span
    id="nav-test-id-1"
  />
</nav>
`;
